--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "greet": "pnpm build && node build/greeter.js",
     "build": "npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:jest": "jest --coverage"
   },
   "keywords": [],
   "author": "arcwo",
